[tool.poetry]
name = "hobby-project"
version = "0.1.0"
description = ""
authors = ["Shakhlyn <shakhlyn.sh.du@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.115.12"}
uvicorn = {extras = ["standard"], version = "^0.34.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
